# django-casdoor-auth

./: CHANGELOG.md  README.md  setup.cfg
.github/workflows/: build.yml
casdoor_auth/: __init__.py  apps.py  tests.py  urls.py  user.py  views.py
src/casdoor_auth/: __init__.py  urls.py  user.py  views.py
