[metadata]
name = casdoor
version = 1.2.0
author = leo220yuyaodog
author_email = magicwindyyd@gmail.com
url = https://github.com/casdoor/django-auth-sso
description = a demo application for use Casdoor SSO
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
platform = any
keywords = Casdoor Django
classifiers = 
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
package_dir = 
	=casdoor_auth
packages = 
	casdoor
setup_requires = 
	setuptools
install_requires =
    django
    casdoor
	requests
	pyjwt
	cryptography
python_requires = >=3.6
test_suite = tests

[bdist_wheel]
universal = true

[sdist]
formats = gztar

