[metadata]
name = casdoor_auth
version = 1.0.1
author = leo220yuyaodog
author_email = magicwindyyd@gmail.com
url = https://github.com/casdoor/django-auth-sso
description = an app for use Casdoor SSO
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
platform = any
keywords = Casdoor Django
classifiers = 
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: Django
	Framework :: Django :: 3.0
	Framework :: Django :: 3.1
	Framework :: Django :: 3.2
	Framework :: Django :: 4.0
	Framework :: Django :: 4.1

[options]
package_dir = 
	=src
packages =
	casdoor_auth
setup_requires = 
	setuptools
install_requires =
    django
    casdoor
python_requires = >=3.6
test_suite = tests

[bdist_wheel]
universal = true

[sdist]
formats = gztar

